@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.140 (gritter) 9/9/06
+.\" Sccsid @(#)doc.tr	1.141 (gritter) 9/10/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -53,10 +53,12 @@
 .fp 2 I timesi ttf
 .fp 3 B timesbd ttf
 .fp 4 BI timesbi ttf
+.fp 5 CW cour ttf
 .flig R fi \[fi] fl \[fl]
 .flig I fi \[fi] fl \[fl]
 .flig B fi \[fi] fl \[fl]
 .flig BI fi \[fi] fl \[fl]
+.flig CW 0
 .kernpair R f R i 55
 .kernpair B f B l 100
 .kernpair B f B i 50
@@ -96,7 +98,7 @@
 .fallback BI BIE
 .flig BI 31
 ..
-.ds Sccsdate 9/9/06
+.ds Sccsdate 9/10/06
 .ds Str \*[Sccsdate]
 .substring Str 0 0
 .if '\*[Str]'%' \{\
@@ -664,8 +666,10 @@ similarly as in the \s-1GNU\s+1 version of \*[TR,] \T'ref_7'\*(GR\|\*u7\*d\T;
 for example,
 names of requests, macros, strings, number registers, and fonts
 can consist of more than two characters.
-However, \fIHeirloom\fR \*(TR is not generally compatible with \*[GR,]
-although adaption of \*(GR documents is often possible.
+Although \fIHeirloom\fR \*(TR is not completely compatible with \*[GR,]
+a special \T's_groff'compatibility mode\T is provided,
+and documents prepared for \*(GR
+can usually be processed without alteration.
 .pg
 As even the most basic printing devices
 are now capable of rastering \*(PS documents
@@ -1889,6 +1893,7 @@ Reference	Sequence	Meaning
 \T'e_a'9.1\T	\T'e_a'\fB\ea\fR\T	\T'e_a'Non-interpreted leader character\T
 \T'e_A'24.6\T	\T'e_A'\fB\eA\fI\'string\'\fR\T	\T'e_A'Anchor definition\T
 \T'e_b'12.3\T	\T'e_b'\fB\eb\fI\'abc...\'\fR\T	\T'e_b'Bracket building function\T
+\T'e_B'1.4\T	\T'e_B'\fB\eB\fI\'string\'\fR\T	\T'e_B'Test if \fIstring\fR is a numerical expression\T
 \T'e_c'4.2\T	\T'e_c'\fB\ec\fR\T	\T'e_c'Interrupt text processing\T
 \T'e_C'2.1\T	\T'e_C'\fB\eC\fI\'xxx\'\fR\T	\T'e_C'Character named \fIxxx\fP\T
 \T'e_d'11.1\T	\T'e_d'\fB\ed\fR\T	\T'e_d'Forward (down) 1/2\|em vertical motion (1/2 line in \*(NR)\T
@@ -2376,6 +2381,10 @@ then
 .ft R
 .x2
 will set the line length to 1/2 the sum of 4.25 inches \(pl 2 picas \(pl 30 points.
+.pg
+The \A'e_B'\fB\eB\fI'string'\fR escape sequence
+checks whether \fIstring\fR is a valid numerical expression
+and evaluates to ``1' if it does and to ``0'' otherwise.
 .sc
 Notation.
 Numerical parameters are indicated in this manual in two ways.
@@ -5763,6 +5772,7 @@ Nothing prevents the picture from being placed off the page.
 .ne 9
 An example how to combine the following requests and macros is:
 .x1
+.ft B
 &psbb picture.eps
 &nrf scale .25
 &nrf y (\en[ury]p\-\en[lly]p)*\en[scale]
@@ -5770,6 +5780,7 @@ An example how to combine the following requests and macros is:
 &PI picture.eps "\enyu,\enxu"
 &sp \enyu
 picture description
+.ft R
 .x2
 .nr nosave 0
 .pg
@@ -6040,6 +6051,7 @@ appear before the top margin of the title page.
 When generating bookmarks for chapters and sections, it is usually most
 practical to include the command in the chapter/section macros:
 .x1
+.ft B
 &de CH
 &	bp
 \ev\'\(or\-1v\-4p\'\e\eX\'PDFMark: Bookmark 0 \e\e$1\'
@@ -6052,6 +6064,7 @@ practical to include the command in the chapter/section macros:
 \e\e$1\ev\'\-1v\'\e\eX\'PDFMark: Bookmark 1 \e\e$1\'
 &	sp
 &.
+.ft R
 .x2
 Unless the bookmark command occurs at the top of the page,
 it refers to the baseline of the text;
@@ -6272,10 +6285,6 @@ and evaluates to ``1' if it does and to ``0'' otherwise.
 The Heirloom \*(TR anchoring escape sequence
 \T'e_A'\fB\eA\fR\T is not available in \*(GR compatibility mode.
 .pg
-The \fB\eB\fI'string'\fR escape sequence
-checks whether \fIstring\fR is a valid numerical expression
-and evaluates to ``1' if it does and to ``0'' otherwise.
-.pg
 The \A'e_/'\fB\e/\fR escape sequence inserts an italic correction,
 i.e. a small piece of horizontal motion
 (1/12\|em) that should be sufficient
@@ -6466,7 +6475,7 @@ then a command, then other parameters.
 .nr nosave 1
 \fBx i	\fRinitialize\fP
 \fBx f \fIn s\fP	\fRmount font \fIs\fR on font position \fIn\fR
-\fBx f \fIn filename\fR	\fIfilename\fR contains metrics for font on position \fIn\fR
+\fBx f \fIn filename flags\fR	\fIfilename\fR contains metrics for font on position \fIn\fR using \fIflags\fR
 \fBx p	\fRpause\(emcan restart
 \fBx s	\fRstop\(emdone forever
 \fBx t	\fRgenerate trailer information, if any
@@ -6478,6 +6487,7 @@ then a command, then other parameters.
 \fBx X CropAt \fIL T W H\fR	generated by the \T'cropat'\fBcropat\fR request\T
 \fBx X HorScale \fIpercent\fR	scale letters horizontally by \fIpercent\fR (with the \T'letadj'\fBletadj\fR\T request)
 \fBx X LC_CTYPE \fIname\fR	sets the \s-1LC_CTYPE\s+1 locale to \fIname\fR
+.ne 2
 \fBx X PaperSize \fIW H n\fR	generated by the \T'mediasize'\fBmediasize\fR\T and \T'papersize'\fBpapersize\fR\T requests
 		\fIn\fR is non-zero for \T'mediasize'\fBmediasize\fR\T
 \A'x_X_PS'\fBx X PS \fIcommand\fR	embed \*(PS \fIcommand\fR
@@ -6507,37 +6517,45 @@ The following is the output from ``hello, world''
 for a typical printer,
 as described in \T's_device'\(sc27\T:
 .tb
-x T post
-x res 720 1 1
+.ft CW
+.ps -1
+x T ps
+x res 72000 1 1
 x init
 V0
 p1
-.sp
-x font 1 R
-x font 2 I
-x font 3 B
-x font 4 BI
-x font 5 CW
-x font 6 H
-x font 7 HB
-x font 8 HX
-x font 9 S1
-x font 10 S
-.sp
+x font 1 /usr/ucblib/doctools/font/devps/R.afm 4
+x font 2 /usr/ucblib/doctools/font/devps/I.afm 4
+x font 3 /usr/ucblib/doctools/font/devps/B.afm 4
+x font 4 /usr/ucblib/doctools/font/devps/BI.afm 4
+x font 5 /usr/ucblib/doctools/font/devps/CW.afm 4
+x font 6 /usr/ucblib/doctools/font/devps/H.afm 4
+x font 7 /usr/ucblib/doctools/font/devps/HB.afm 4
+x font 8 /usr/ucblib/doctools/font/devps/HX.afm 4
+x font 9 /usr/ucblib/doctools/font/devps/S1.afm 516
+x font 10 /usr/ucblib/doctools/font/devps/S.afm 1028
 s10
 f1
-H0
-s10
-f1
-V0
-H720
-V120
+x X LC_CTYPE en_US.utf8
+H72000
+V12000
 ch
-50e44l28l28o50,w58w72o50r33l28dn120 0
+h5000ce
+h4440cl
+h2780cl
+h2780co
+h5000c,
+wh5830cw
+h7120co
+h5000cr
+h3330cl
+h2780cd
+n12000 0
 x trailer
-.nr nosave 0
-V7920
+V792000
 x stop
+.ps
+.ft R
 .pg
 \*(TR output is normally not redundant;
 size and font changes and position information are not included
@@ -6613,27 +6631,34 @@ must occur last, parameters may appear in any order.
 Here is a subset of the \fB\s-1DESC\s+1\fR
 file for a typical Postscript printer:
 .tb
+.ft CW
+.ps -1
 # Description file for Postscript printers.
 
 fonts 10 R I B BI CW H HB HX S1 S
 sizes 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 38 40 44 48 54 60 72 0
-res 720
+anysize
+allpunct
+afmfonts
+lc_ctype
+res 72000
 hor 1
 vert 1
-unitwidth 10
+unitwidth 1
 charset
 hy ct fi fl ff Fi Fl dg em 14 34 12 en aa
 ga ru sc dd -> br Sl ps cs cy as os =. ld
-rd le ge pp -+ ob vr
+rd le ge pp -+ ob vr rs dq
 sq bx ci fa te ** pl mi eq ~= *A *B *X *D
 *E *F *G *Y *I *K *L *M *N *O *P *R *H *S *T *U *W
 .nr nosave 0
 *C *Q *Z ul rn *a *b *x *d *e *f *g *y *i *k
 *l *m *n *o *p *h *r *s *t *u *w *c *q *z
+.ps
+.ft R
 .sc
 \A'c_fontdescr'Font description files.
-.pg
 Note: This description applies to the old
 \*(TR device-independent font format.
 The current version of \*(TR usually reads font metrics
@@ -6690,6 +6715,8 @@ Here are excerpts from a typical font description file
 for the same Postscript printer.
 .tb
 .ta .5i 1i 1.5i 2.5i
+.ft CW
+.ps -1
 hy	33	0	45	hyphen \e(hy
 -	"			- is a synonym for \e(hy
 .sp
@@ -6705,6 +6732,8 @@ em	100	0	208
 .nr nosave 0
 \-\-\-	44	2	220	English pound currency symbol \eN'220'
 \-\-\-	36	0	221	centered dot \eN'221'
+.ps
+.ft R
 .pg
 This says, for example, that the width of the letter \fBa\fR
 is 44 units at point size 10,
